# magic-debugger-python

./: Makefile  README.md  config.example.json  main.py  pyproject.toml  requirements.txt  setup.py  start.sh
adapters/: __init__.py  gdb.py  lldb.py
core/: __init__.py  controller.py  dap.py  session.py  state.py
server/: __init__.py  http.py  rpc.py
tests/: test_basic.py  test_sample.c
vim-plugin/lua/magic-debug/: init.lua
